--- a/asseets/style.css
+++ b/asseets/style.css
@@ -25,10 +25,10 @@ body {
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
   }
-  .Cartao_Conteudo p {
+  .Cartao__Conteudo p {
     padding: 4rem;
   }
-  .Cartao_Conteudo h3 {
+  .Cartao__Conteudo h3 {
     color: var(--text-color);
     border: 1px solid var(--text-color);
     text-align: left;
@@ -38,14 +38,14 @@ body {
     border-radius: 0.6rem;
     font-size: 1vw;
   }
-  .Cartao_Conteudo_Resposta p {
+  .Cartao__Conteudo_Resposta p {
     color: var(--card-back-color);
     font-weight: 700;
   }
- .Cartao:hover .Cartao_Conteudo{
+ .Cartao:hover .Cartao__Conteudo{
     transform: rotateY(180deg);
  }
- .Cartao_Conteudo{
+ .Cartao__Conteudo{
   transform-style: preserve-3d;
   transition: transform 300ms ease-in-out;
  }
