--- a/asseets/style.css
+++ b/asseets/style.css
@@ -62,6 +62,12 @@ body {
   transform-style: preserve-3d;
   transition: transform 300ms ease-in-out;
 }
+.Cartao__Conteudo h3 {
+  backface-visibility: hidden;
+}
+.cartao__conteudo__frente,.cartao__conteudo__verso {
+  backface-visibility: hidden;
+}
 
 footer {
   background-color: black;
