--- a/asseets/style.css
+++ b/asseets/style.css
@@ -61,7 +61,7 @@ body {
   transform: rotateY(180deg);
 }
 
-.Cartao_Conteudo_Pergunta .Cartao__Conteudo_Resposta {
+.Cartao_Conteudo_Pergunta,.Cartao__Conteudo_Resposta {
   backface-visibility: hidden;
   position: absolute;
   height: 100%;
